grammar.js
    source_file: ($) =>
      seq(optional($.shebang), repeat($._top_level_statement)),

    _top_level_statement: ($) =>
      choice(
        $.file_attribute_list,
        $.namespace_definition,
        $._non_namespace_top_level_statement,
      ),

    _statement: ($) =>
      choice(
        $.if_statement,
        $.while_statement,
        $.do_while_statement,
        $.for_statement,
        $.foreach_statement,
        $.using_statement,
        $.try_statement,
        $.final_local_declaration,
        $.expression_statement,
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    constant_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "const",
        field("name", $.constant_name),
        "=",
        field("value", $._expression),
        ";",
      ),

    function_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "function",
        field("name", $.function_name),
        optional($.type_parameter_list),
        field("parameters", $.parameter_list),
        optional($.return_type),
        optional($.where_clause),
        field("body", $.block),
      ),

    parameter_list: ($) =>
      seq("(", optional(seq(commaSep1($.parameter), optional(","))), ")"),

    return_type: ($) => seq(":", field("type", $._type)),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.parenthesized_expression),
          field("consequence", $.block),
          optional($.else_clause),
        ),
      ),

    else_clause: ($) =>
      seq("else", field("body", choice($.if_statement, $.block))),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.parenthesized_expression),
        field("body", $.block),
      ),

    do_while_statement: ($) =>
      seq(
        "do",
        field("body", $.block),
        "while",
        field("condition", $.parenthesized_expression),
        ";",
      ),

    for_statement: ($) =>
      seq(
        "for",
        "(",
        field("initializer", optional($.expression_list)),
        ";",
        field("condition", optional($.expression_list)),
        ";",
        field("update", optional($.expression_list)),
        ")",
        field("body", $.block),
      ),

    expression_list: ($) => commaSep1($._expression),

    foreach_statement: ($) =>
      seq(
        "foreach",
        "(",
        field("collection", $._foreach_expression),
        "as",
        field(
          "target",
          choice($.foreach_value_target, $.foreach_key_value_target),
        ),
        ")",
        field("body", $.block),
      ),

    foreach_value_target: ($) => field("value", $._assignment_target),

    foreach_key_value_target: ($) =>
      seq(
        field("key", $._assignment_target),
        "=>",
        field("value", $._assignment_target),
      ),

    using_statement: ($) =>
      seq(
        "using",
        "(",
        commaSep1($.using_binding),
        optional(","),
        ")",
        field("body", $.block),
      ),

    using_binding: ($) =>
      prec(
        PREC.COALESCE,
        seq(
          field("target", $._binding_target),
          "=",
          field("value", $._expression),
        ),
      ),

    try_statement: ($) =>
      prec.right(
        seq(
          "try",
          field("body", $.block),
          repeat($.catch_clause),
          optional($.try_else_clause),
          optional($.finally_clause),
        ),
      ),

    catch_clause: ($) =>
      seq(
        "catch",
        "(",
        field("type", $._type),
        optional(field("name", $.variable)),
        ")",
        optional($.catch_guard),
        field("body", $.block),
      ),

    catch_guard: ($) =>
      seq("if", field("condition", $.parenthesized_expression)),
    try_else_clause: ($) => seq("else", field("body", $.block)),
    finally_clause: ($) => seq("finally", field("body", $.block)),

    final_local_declaration: ($) =>
      seq(
        "final",
        field("name", $.variable),
        "=",
        field("value", $._expression),
        ";",
      ),

    expression_statement: ($) => seq($._expression, ";"),

    _expression: ($) => $._assignment_level,

    _assignment_level: ($) =>
      choice($.assignment_expression, $._conditional_level),

    conditional_expression: ($) =>
      prec.right(
        PREC.CONDITIONAL,
        seq(
          field("condition", $._coalesce_level),
          "?",
          field("then", $._assignment_level),
          ":",
          field("otherwise", $._assignment_level),
        ),
      ),

    _coalesce_level: ($) =>
      choice(
        alias($._coalesce_expression, $.binary_expression),
        $._logical_or_level,
      ),
    _type_operation_level: ($) =>
      choice($.type_operation_expression, $._pipe_level),

    _pipe_level: ($) =>
      choice(
        alias($._pipe_expression, $.binary_expression),
        $._concatenation_level,
      ),
    _postfix_level: ($) =>
      choice(
        $._primary_expression,
        alias($._postfix_update_expression, $.update_expression),
        $.function_call_expression,
        $.function_partial_application_expression,
        $.method_call_expression,
        $.method_partial_application_expression,
        $.null_safe_method_call_expression,
        $.static_method_call_expression,
        $.static_method_partial_application_expression,
        $.property_access_expression,
        $.null_safe_property_access_expression,
        $.static_property_access_expression,
        $.class_constant_access_expression,
        $.subscript_expression,
      ),

    _foreach_expression: ($) => $._foreach_assignment_level,

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    vector_expression: ($) =>
      seq(
        "vec",
        "[",
        optional(seq(commaSep1($.vector_element), optional(","))),
        "]",
      ),

    vector_element: ($) => seq(optional("..."), field("value", $._expression)),

    object_creation_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          "new",
          field("class", $._class_reference),
          optional(field("arguments", $.argument_list)),
        ),
      ),

    _class_reference: ($) =>
      choice(
        seq(field("name", $._name), optional($.turbofish)),
        $.relative_scope,
        $.variable,
        $.parenthesized_expression,
      ),

    break_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq("break", optional(field("level", $.integer_literal))),
      ),

    continue_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq("continue", optional(field("level", $.integer_literal))),
      ),

    return_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq("return", optional(field("value", $._expression))),
      ),

    throw_expression: ($) =>
      prec.right(PREC.ASSIGNMENT, seq("throw", field("value", $._expression))),

    require_construct: ($) => unaryConstruct($, "require", "value"),
    require_once_construct: ($) => unaryConstruct($, "require_once", "value"),
    length_construct: ($) => unaryConstruct($, "length", "value"),
    contains_construct: ($) => binaryConstruct($, "contains", "array", "value"),
    contains_key_construct: ($) =>
      binaryConstruct($, "contains_key", "array", "key"),

    clone_construct: ($) =>
      construct(
        "clone",
        seq(
          field("object", $._expression),
          repeat(seq(",", $.clone_field)),
          optional(","),
        ),
      ),

    clone_field: ($) =>
      seq(field("name", $.member_name), ":", field("value", $._expression)),

    remove_construct: ($) => binaryConstruct($, "remove", "array", "key"),
    swap_remove_construct: ($) =>
      binaryConstruct($, "swap_remove", "vector", "index"),
    remove_first_construct: ($) => unaryConstruct($, "remove_first", "array"),
    remove_last_construct: ($) => unaryConstruct($, "remove_last", "array"),

    assert_construct: ($) =>
      construct(
        "assert",
        seq(
          field("condition", $._expression),
          optional($.assert_message),
          optional(","),
        ),
      ),

    assert_message: ($) => seq(",", field("value", $._expression)),

    exit_construct: ($) =>
      construct(
        "exit",
        optional(seq(field("code", $._expression), optional(","))),
      ),

    panic_construct: ($) => unaryConstruct($, "panic", "message"),
    write_construct: ($) => variadicConstruct($, "write"),
    write_line_construct: ($) => variadicConstruct($, "write_line"),
    write_error_construct: ($) => variadicConstruct($, "write_error"),
    write_error_line_construct: ($) => variadicConstruct($, "write_error_line"),
    debug_construct: ($) => variadicConstruct($, "debug"),
    construct_argument: ($) => field("value", $._expression),
    discard_construct: ($) => unaryConstruct($, "discard", "value"),
    sequence_construct: ($) =>
      construct(
        "sequence",
        seq(commaSep1($.construct_argument), optional(",")),
      ),

    drop_construct: ($) =>
      construct(
        "drop",
        seq(commaSep1(field("variable", $.variable)), optional(",")),
      ),

    file_construct: (_) => construct("file"),
    directory_construct: (_) => construct("directory"),
    embed_construct: ($) => literalStringConstruct($, "embed", "path"),
    cpu_architecture_construct: (_) => construct("cpu_architecture"),
    operating_system_construct: (_) => construct("operating_system"),
    operating_system_family_construct: (_) =>
      construct("operating_system_family"),
    shared_library_prefix_construct: (_) =>
      construct("shared_library_prefix"),
    shared_library_suffix_construct: (_) =>
      construct("shared_library_suffix"),
    shared_library_extension_construct: (_) =>
      construct("shared_library_extension"),
    executable_suffix_construct: (_) => construct("executable_suffix"),
    executable_extension_construct: (_) => construct("executable_extension"),

    comparison_expression: ($) =>
      prec(
        PREC.COMPARISON,
        seq(
          field("left", $._type_operation_level),
          field("operator", $.comparison_operator),
          field("right", $._type_operation_level),
        ),
      ),

    comparison_operator: (_) => choice("==", "!=", "<", "<=", ">", ">=", "<=>"),

    type_operation_expression: ($) =>
      seq(
        field("value", $._pipe_level),
        field("operator", choice("is", "as", seq("?", "as"))),
        field("type", $._type),
      ),

    _assignment_target: ($) =>
      choice(
        $.variable,
        $.property_access_expression,
        $.static_property_access_expression,
        $.subscript_expression,
        $.append_expression,
        $.parenthesized_assignment_target,
        $.tuple_destructure,
        $.dictionary_destructure,
      ),

    _binding_target: ($) =>
      choice($.variable, $.tuple_binding_target, $.dictionary_binding_target),

    tuple_binding_target: ($) =>
      seq(
        "(",
        $._binding_target,
        ",",
        repeat(seq(choice($._binding_target, $.trailing_binding_target), ",")),
        optional(choice($._binding_target, $.trailing_binding_target)),
        ")",
      ),

    trailing_binding_target: ($) =>
      seq("...", optional(field("target", $._binding_target))),

    dictionary_binding_target: ($) =>
      seq(
        "dict",
        "[",
        optional(seq(commaSep1($.dictionary_binding_entry), optional(","))),
        "]",
      ),

    dictionary_binding_entry: ($) =>
      seq(
        field("key", $._expression),
        "=>",
        field("target", $._binding_target),
      ),

    assignment_expression: ($) =>
      prec.right(
        seq(
          field("left", $._assignment_target),
          field("operator", $.assignment_operator),
          field("right", $._assignment_level),
        ),
      ),

    assignment_operator: (_) =>
      choice(
        "=",
        "+=",
        "-=",
        "*=",
        "/=",
        "%=",
        "**=",
        ".=",
        "&=",
        "|=",
        "^=",
        "<<=",
        ">>=",
        "??=",
        "&&=",
        "||=",
      ),

    function_call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        choice(
          seq(
            field("function", $._postfix_level),
            optional($.turbofish),
            field("arguments", $.argument_list),
          ),
          seq(
            field("function", $._soft_function_name),
            field("arguments", $.argument_list),
          ),
        ),
      ),

    method_call_expression: ($) =>
      prec.left(
        PREC.POSTFIX + 1,
        seq(
          field("object", $._postfix_level),
          "->",
          field("method", $.member_name),
          optional($.turbofish),
          field("arguments", $.argument_list),
        ),
      ),

    argument_list: ($) =>
      seq("(", optional(seq(commaSep1($.argument), optional(","))), ")"),

    argument: ($) => choice($.named_argument, $.positional_argument),

    positional_argument: ($) => field("value", $._expression),
    boolean_literal: (_) => choice("true", "false"),
    integer_literal: (_) =>
      token(
        seq(
          choice(
            /0[xX][0-9A-Fa-f](?:_?[0-9A-Fa-f])*/,
            /0[bB][01](?:_?[01])*/,
            /0[oO][0-7](?:_?[0-7])*/,
            /0|[1-9](?:_?[0-9])*/,
          ),
          optional(/[iIuU]/),
        ),
      ),

    string_literal: ($) =>
      choice($.single_quoted_string, $.double_quoted_string),

    single_quoted_string: ($) =>
      seq(
        "'",
        repeat(
          choice(
            alias($._single_quoted_string_content, $.string_content),
            $.single_quoted_escape_sequence,
          ),
        ),
        "'",
      ),

    _single_quoted_string_content: (_) => token.immediate(prec(1, /[^'\\]+/)),
    _constant_reference: ($) =>
      choice($.constant_name, $.qualified_name, $.fully_qualified_name),

    constant_access_expression: ($) => field("name", $._constant_reference),

    _type: ($) =>
      choice(
        $.union_type,
        $.intersection_type,
        $.negated_type,
        $._type_primary,
      ),

    union_type: ($) =>
      prec.left(
        PREC.TYPE_UNION,
        seq(field("left", $._type), "|", field("right", $._type)),
      ),

    primitive_type: (_) =>
      choice(
        "string",
        "int",
        "uint",
        "fresh",
        "float",
        "bool",
        "void",
        "mixed",
        "never",
        "object",
      ),

    named_type: ($) =>
      seq($._named_type_base, optional($.member_type)),

    _named_type_base: ($) =>
      prec.right(seq(field("name", $._name), optional($.type_argument_list))),

    type_argument_list: ($) =>
      seq("<", commaSep1($.type_argument), optional(","), ">"),

    type_argument: ($) => field("type", $._type),

    vector_type: ($) => seq("vec", optional($.type_argument_list)),

    variable: (_) => token(seq("$", IDENTIFIER)),
    identifier: ($) => choice($._identifier_token, "_", ...CONSTRUCT_NAMES),
    _local_identifier: ($) =>
      choice(
        alias($._identifier_token, $.identifier),
        ...CONSTRUCT_NAMES.map((name) => alias(name, $.identifier)),
      ),

    function_name: ($) =>
      choice($._local_identifier, ...SOFT_KEYWORDS, ...CONTEXTUAL_KEYWORDS),
    _soft_function_name: ($) =>
      alias(choice(...SOFT_KEYWORDS), $.function_name),
    constant_name: ($) => choice($._local_identifier, ...CONTEXTUAL_KEYWORDS),
