test/corpus/control_flow.txt
==================
Conditionals and loops
==================

if ($ready) {
  $state = 1;
} else if ($pending) {
  $state = 2;
} else {
  $state = 3;
}

while ($running) {
  if ($skip) {
    continue;
  }
  break 2;
}

do {
  $index++;
} while ($index < 10);

for ($left = 0, $right = 10; $left < $right; $left++, $right--) {
  continue 1;
}

foreach ($values as $value) {
  write!($value);
}

foreach ($values as $key => $value) {
  write!($key, $value);
}

---

(source_file
  (if_statement
    condition: (parenthesized_expression
      (variable))
    consequence: (block
      (expression_statement
        (assignment_expression
          left: (variable)
          operator: (assignment_operator)
          right: (integer_literal))))
    (else_clause
      body: (if_statement
        condition: (parenthesized_expression
          (variable))
        consequence: (block
          (expression_statement
            (assignment_expression
              left: (variable)
              operator: (assignment_operator)
              right: (integer_literal))))
        (else_clause
          body: (block
            (expression_statement
              (assignment_expression
                left: (variable)
                operator: (assignment_operator)
                right: (integer_literal))))))))
  (while_statement
    condition: (parenthesized_expression
      (variable))
    body: (block
      (if_statement
        condition: (parenthesized_expression
          (variable))
        consequence: (block
          (expression_statement
            (continue_expression))))
      (expression_statement
        (break_expression
          level: (integer_literal)))))
  (do_while_statement
    body: (block
      (expression_statement
        (update_expression
          operand: (variable))))
    condition: (parenthesized_expression
      (comparison_expression
        left: (variable)
        operator: (comparison_operator)
        right: (integer_literal))))
  (for_statement
    initializer: (expression_list
      (assignment_expression
        left: (variable)
        operator: (assignment_operator)
        right: (integer_literal))
      (assignment_expression
        left: (variable)
        operator: (assignment_operator)
        right: (integer_literal)))
    condition: (expression_list
      (comparison_expression
        left: (variable)
        operator: (comparison_operator)
        right: (variable)))
    update: (expression_list
      (update_expression
        operand: (variable))
      (update_expression
        operand: (variable)))
    body: (block
      (expression_statement
        (continue_expression
          level: (integer_literal)))))
  (foreach_statement
    collection: (variable)
    target: (foreach_value_target
      value: (variable))
    body: (block
      (expression_statement
        (write_construct
          (construct_argument
            value: (variable))))))
  (foreach_statement
    collection: (variable)
    target: (foreach_key_value_target
      key: (variable)
      value: (variable))
    body: (block
      (expression_statement
        (write_construct
          (construct_argument
            value: (variable))
          (construct_argument
            value: (variable)))))))

==================
Using, try, catch, else, and finally
==================

using (
  $resource = open(),
  ($first, ...$rest) = pair(),
  dict['value' => $value] = values(),
) {
  final $result = consume($resource);
}

try {
  $value ?? throw new Error('missing');
} catch (FirstError|SecondError $error) if ($error->isRetryable()) {
  retry();
} catch (Throwable) {
  recover();
} else {
  complete();
} finally {
  cleanup();
}

---

(source_file
  (using_statement
    (using_binding
      target: (variable)
      value: (function_call_expression
        function: (constant_access_expression
          name: (constant_name
            (identifier)))
        arguments: (argument_list)))
    (using_binding
      target: (tuple_binding_target
        (variable)
        (trailing_binding_target
          target: (variable)))
      value: (function_call_expression
        function: (constant_access_expression
          name: (constant_name
            (identifier)))
        arguments: (argument_list)))
    (using_binding
      target: (dictionary_binding_target
        (dictionary_binding_entry
          key: (string_literal
            (single_quoted_string
              (string_content)))
          target: (variable)))
      value: (function_call_expression
        function: (constant_access_expression
          name: (constant_name
            (identifier)))
        arguments: (argument_list)))
    body: (block
      (final_local_declaration
        name: (variable)
        value: (function_call_expression
          function: (constant_access_expression
            name: (constant_name
              (identifier)))
          arguments: (argument_list
            (argument
              (positional_argument
                value: (variable))))))))
  (try_statement
    body: (block
      (expression_statement
        (binary_expression
          left: (variable)
          right: (throw_expression
            value: (object_creation_expression
              class: (identifier)
              arguments: (argument_list
                (argument
                  (positional_argument
                    value: (string_literal
                      (single_quoted_string
                        (string_content)))))))))))
    (catch_clause
      type: (union_type
        left: (named_type
          name: (identifier))
        right: (named_type
          name: (identifier)))
      name: (variable)
      (catch_guard
        condition: (parenthesized_expression
          (method_call_expression
            object: (variable)
            method: (member_name
              (identifier))
            arguments: (argument_list))))
      body: (block
        (expression_statement
          (function_call_expression
            function: (constant_access_expression
              name: (constant_name
                (identifier)))
            arguments: (argument_list)))))
    (catch_clause
      type: (named_type
        name: (identifier))
      body: (block
        (expression_statement
          (function_call_expression
            function: (constant_access_expression
              name: (constant_name
                (identifier)))
            arguments: (argument_list)))))
    (try_else_clause
      body: (block
        (expression_statement
          (function_call_expression
            function: (constant_access_expression
              name: (constant_name
                (identifier)))
            arguments: (argument_list)))))
    (finally_clause
      body: (block
        (expression_statement
          (function_call_expression
            function: (constant_access_expression
              name: (constant_name
                (identifier)))
            arguments: (argument_list)))))))

==================
Empty statements are rejected
==================

;

---

(source_file
  (ERROR))

==================
Declarations are rejected in executable blocks
==================

function outer(): void {
  function inner(): void {}
}

---

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list)
    (return_type
      type: (primitive_type))
    body: (block
      (MISSING "}")))
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list)
    (return_type
      type: (primitive_type))
    body: (block))
  (ERROR))

==================
Standalone blocks are rejected
==================

{}

---

(source_file
  (ERROR))
